--- a/Ksiegarnia/Views/Book/Details.cshtml
+++ b/Ksiegarnia/Views/Book/Details.cshtml
@@ -2,18 +2,32 @@
 
 <h2>Szczegóły Książki</h2>
 
-<div>
-    <dl class="dl-horizontal">
-        <dt>ID</dt>
-        <dd>@Model.BookId</dd>
-        <dt>Tytuł</dt>
-        <dd>@Model.Title</dd>
-        <dt>Autor</dt>
-        <dd>@Model.Author</dd>
-        <dt>Cena</dt>
-        <dd>@Model.Price</dd>
-    </dl>
-</div>
+@if (Model != null)
+{
+    <div>
+        <dl class="dl-horizontal">
+            <dt>ID</dt>
+            <dd>@Model.BookId</dd>
+            <dt>Tytuł</dt>
+            <dd>@Model.Title</dd>
+            <dt>Autor</dt>
+            <dd>@Model.Author</dd>
+            <dt>Cena</dt>
+            <dd>@Model.Price</dd>
+        </dl>
+    </div>
+    <form asp-controller="Cart" asp-action="AddToCart" method="post">
+        <input type="hidden" name="bookId" value="@Model.BookId" />
+        <label for="quantity">Ilość:</label>
+        <input type="number" name="quantity" value="1" min="1" />
+        <button type="submit">Dodaj do koszyka</button>
+    </form>
+}
+else
+{
+    <p>Brak danych do wyświetlenia.</p>
+}
+
 <p>
     <a asp-action="Index">Powrót do listy książek</a>
 </p>
