--- a/Ksiegarnia/Views/Book/Index.cshtml
+++ b/Ksiegarnia/Views/Book/Index.cshtml
@@ -5,10 +5,12 @@
 <table class="table">
     <thead>
         <tr>
-            
+            <th>   </th>
             <th>Tytuł</th>
             <th>Autor</th>
             <th>Cena</th>
+            <th>   </th>
+            
             
         </tr>
     </thead>
@@ -16,7 +18,9 @@
         @foreach (var book in Model)
         {
             <tr>
-                
+                <td>
+                    <img src="~/images/@book.CoverImage" alt="Cover Image" style="max-width: 60px; max-height: 60px;" />
+                </td>
                 <td>@book.Title</td>
                 <td>@book.Author</td>
                 <td>@book.Price</td>
@@ -24,6 +28,7 @@
                     <a asp-action="Details" asp-route-id="@book.BookId">Szczegóły</a> 
                    
                 </td>
+             
             </tr>
         }
     </tbody>
