--- a/Ksiegarnia/Views/Home/Index.cshtml
+++ b/Ksiegarnia/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Witaj w naszej księgarni</h1>
+    
+    <img src="~/images/ksiegarnia.jpeg" alt="ksiegarnia" style="width: 100%; height: 68vh; object-fit: cover;">
+
 </div>
