--- a/Ksiegarnia/Views/Shared/_Layout.cshtml
+++ b/Ksiegarnia/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index">Koszyk</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EmailData" asp-action="Index">Kontakt</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmailData" asp-action="Contact">Kontakt</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookManagement" asp-action="Index">Zarządzanie</a>
                         </li>
                      
                         
