--- a/Ksiegarnia/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Ksiegarnia/Areas/Identity/Pages/Account/Register.cshtml
@@ -56,6 +56,11 @@
         .form-floating {
             margin-bottom: 20px;
         }
+        /* Margines pomiędzy polem Email a polem Hasło */
+    #Input_Password {
+        margin-top: 10px;
+    }
+
 
         .form-control {
             width: 100%;
