--- a/Ksiegarnia/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Ksiegarnia/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -58,6 +58,9 @@
             Proszę sprawdzić swoją skrzynkę e-mail, aby potwierdzić konto.
         </p>
     }
+    <!-- Dodanie obrazka (zmień ścieżkę do pliku gif) -->
+    <img src="~/images/click.gif" alt="GIF" style="margin-left: auto; display: block;">>>
+
 
     <script>
         // Add your scripts here
