--- a/Ksiegarnia/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Ksiegarnia/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm Email";
+    ViewData["Title"] = "Potwierdź E-mail";
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
 
@@ -31,7 +31,7 @@
             background-color: #dff0d8;
             border: 1px solid #d6e9c6;
             border-radius: 4px;
-            color: #3c763d;
+            color: #2184b7;
         }
 
         .btn-primary {
