--- a/Ksiegarnia/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Ksiegarnia/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm Email Change";
+    ViewData["Title"] = "Potwierdź Zmianę E-mail";
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
 
