--- a/Ksiegarnia/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Ksiegarnia/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Rejestracja";
     Layout = "/Areas/Identity/Pages/_Layout.cshtml";
 }
 
@@ -97,7 +97,7 @@
                     <label asp-for="Input.Email" class="form-label"></label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+                <button type="submit" class="w-100 btn btn-lg btn-primary">Rejestracja</button>
             </form>
         </div>
     </div>
