--- a/Ksiegarnia/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/Ksiegarnia/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -43,7 +43,7 @@
 <body>
     <h1>@ViewData["Title"]</h1>
     <p>
-        Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+        Twoje hasło zostało zmienione <a asp-page="./Login">Zaloguj się</a>.
     </p>
 
     <script>
