--- a/Ksiegarnia/Views/BookManagement/Add.cshtml
+++ b/Ksiegarnia/Views/BookManagement/Add.cshtml
@@ -89,22 +89,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="form-title">Add Book</h1>
+    <h1 class="form-title">Nowa książka</h1>
 
     @using (Html.BeginForm("Add", "BookManagement", FormMethod.Post, new { enctype = "multipart/form-data", @class = "add-form" }))
     {
         <div class="form-group">
-            <label asp-for="Title" class="form-label">Title</label>
+            <label asp-for="Title" class="form-label">Tytuł</label>
             <input asp-for="Title" class="form-input" />
         </div>
 
         <div class="form-group">
-            <label asp-for="Author" class="form-label">Author</label>
+            <label asp-for="Author" class="form-label">Autor</label>
             <input asp-for="Author" class="form-input" />
         </div>
 
         <div class="form-group">
-            <label asp-for="Description" class="form-label">Description</label>
+            <label asp-for="Description" class="form-label">Opis</label>
             <textarea asp-for="Description" class="form-textarea"></textarea>
         </div>
 
@@ -114,11 +114,11 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="CoverImage" class="form-label">Cover Image</label>
+            <label asp-for="CoverImage" class="form-label">Okładka</label>
             <input type="file" name="coverImage" class="form-input" />
         </div>
 
-        <button type="submit" class="form-button">Add Book</button>
+        <button type="submit" class="form-button">Dodaj ksiązkę</button>
     }
 
     <a asp-action="Index" class="back-link">Back to List</a>
