--- a/Ksiegarnia/Views/Shared/_Layout.cshtml
+++ b/Ksiegarnia/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿<!-- _Layout.cshtml -->
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,6 +9,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Ksiegarnia.styles.css" asp-append-version="true" />
+
+    <style>
+        .navbar-nav .nav-link {
+            font-size: 18px; /* Dostosuj rozmiar tekstu według potrzeb */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -19,7 +27,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Lista Książek</a>
                         </li>
@@ -29,11 +37,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmailData" asp-action="Contact">Kontakt</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="BookManagement" asp-action="Index">Zarządzanie</a>
-                        </li>
-                     
-                        
+                        @if (User.Identity.IsAuthenticated && User.Identity.Name == "admin@wp.pl")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="BookManagement" asp-action="Index">Zarządzanie</a>
+                            </li>
+                        }
+
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
