--- a/Ksiegarnia/Views/Home/Privacy.cshtml
+++ b/Ksiegarnia/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Projekt Wykonali";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Izabela Kozibura oraz Marcin Kuras</p>
