--- a/Ksiegarnia/Views/Home/Privacy.cshtml
+++ b/Ksiegarnia/Views/Home/Privacy.cshtml
@@ -1,6 +1,46 @@
 ﻿@{
     ViewData["Title"] = "Projekt Wykonali";
 }
-<h1>@ViewData["Title"]</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewData["Title"]</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-<p>Izabela Kozibura oraz Marcin Kuras</p>
+        .text-center {
+            text-align: center;
+        }
+
+        .display-4 {
+            margin-top: 50px;
+            color: #333;
+        }
+
+        img {
+            width: 100%;
+            height: 68vh;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+    <div class="text-center">
+        <h1>@ViewData["Title"]</h1>
+        <p>Izabela Kozibura oraz Marcin Kuras</p>
+
+    </div>
+</body>
+</html>
+
+
+
